nacos/nacos-cluster-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: nacos
spec:
  selector:
    matchLabels:
      app: nacos
  serviceName: "nacos"
  replicas: 3
  template:
    metadata:
      labels:
        app: nacos
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      terminationGracePeriodSeconds: 10
      containers:
      - name: nacos
        imagePullPolicy: IfNotPresent
        image: nacos/nacos-server:v2.1.0
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8848
          name: client
        - containerPort: 9848
          name: client-rpc
        - containerPort: 9849
          name: raft-rpc
        - containerPort: 7848
          name: old-raft-rpc
        volumeMounts:
        - name: nacos-storage
          mountPath: /home/nacos/plugins/peer-finder
          subPath: peer-finder
        - name: nacos-storage
          mountPath: /home/nacos/data
          subPath: data
        - name: nacos-storage
          mountPath: /home/nacos/logs
          subPath: logs
  volumeClaimTemplates:
  - metadata:
      name: nacos-storage
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: gluster
      resources:
        requests:
          storage: 10Gi
